just a comment change in viewridepat and the time stemp in the login

--- a/Road to Recovery/pages/viewRidePats.html
+++ b/Road to Recovery/pages/viewRidePats.html
@@ -67,12 +67,12 @@
 
         /*
          =======================================================
-         ||       --- !!! TEMORARY & IMPORTANT NOTE !!! ---   ||
+         ||       --- !!!  IMPORTANT NOTE !!! ---             ||
          ||                                                   ||
          ||         AS FOR 29.10.2020 WHEN RECOVER A RIDEPAT  ||
          ||              DOES NOT RECOVER ITS OLD DRIVER !    ||
          ||                                                   ||
-         ||       --- !!! TEMORARY & IMPORTANT NOTE !!! ---   ||
+         ||       --- !!!  IMPORTANT NOTE !!! ---             ||
          =======================================================
          */
 
