--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -133,6 +133,7 @@
             $("#rp_amuta_vls_per_pat").click(on_report_click);
             $("#rp_amuta_vls_km").click(on_report_click);
             $("#rp_amuta_vls_list").click(on_report_click);
+            $("#rp_amuta_vls_per_month").click(on_report_click);
     
            
 
@@ -349,6 +350,7 @@
                                         <li><a class="report_link_cls" id="rp_amuta_vls_per_pat">מתנדבים - פר חולה</a></li>
                                         <li><a class="report_link_cls" id="rp_amuta_vls_km">מתנדבים – שנתי</a></li>
                                         <li><a class="report_link_cls" id="rp_amuta_vls_list">רשימת מתנדבים</a></li>
+                                        <li><a class="report_link_cls" id="rp_amuta_vls_per_month"> מספר מתנדבים חודשי</a></li>
                                     </ul>
                                 </li>
                                 <li>
@@ -403,6 +405,18 @@
                                             <th title="Address" class="timeCustomWidth">כתובת</th>
                                             <th title="CityCityName" class="timeCustomWidth">ישוב מגורים</th>
                                             <th title="JoinDate" class="timeCustomWidth">תאריך הצטרפות</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody></tbody>
+                                </table>
+                            </div>
+                            <div id="div_table_amuta_vls_per_month" style="display:none" class="card-box table-responsive">
+                                <table id="table_amuta_vls_month" class="table table-striped table-bordered">
+                                    <thead>
+                                        <tr>
+                                            <th title="Year" class="timeCustomWidth">שנה</th>
+                                            <th title="Month" class="timeCustomWidth">חודש</th>
+                                            <th title="Count" class="timeCustomWidth">מספר</th>
                                         </tr>
                                     </thead>
                                     <tbody></tbody>
@@ -502,7 +516,7 @@
                         </div>
                         <div class="row report_template" name="template_VOLUNTEER_LIST_RADIO">
                             <div class="card-box">
-                                <div class="row" >
+                                <div class="row">
                                     <div class="col-sm-1"><input type="radio" template_name="radio" template_id="radio_start_date" style="margin-top: 10px" checked /></div>
                                     <div class="col-sm-11">
                                         <div class="form-group">
@@ -559,6 +573,8 @@
 
                                 </div>
                             </div>
+                        </div>
+                        <div class="row report_template" name="template_PER_MONTH">
                         </div>
                         <div class="row report_template report_hidden" name="HIDDEN_MONTH">
                             <input type="text" template_id="select_month" class="form-control" aria-required="true" aria-invalid="false">
