--- a/Road to Recovery/pages/weeklyRides.html
+++ b/Road to Recovery/pages/weeklyRides.html
@@ -475,7 +475,14 @@
                         $(row).find('td:eq(8)').html(btnStr);
                     }
                     else if (data.Drivers == "ממתינה לשיבוץ") {
-                        $(row).find('td:eq(7)').html("");
+
+                        $(row).find('td:eq(7)').css('background-color', '#75797d');
+                        $(row).find('td:eq(7)').css('color', '#a1abb5');
+                        $(row).find('td:eq(7)').css('font-weight', 'bold');
+
+                        
+                        $(row).find('td:eq(7)').html("זמן הנסיעה עבר");
+
                     }
                 }
             });
