Implemented GetCurrentUserEntitlements; use it for NI report

--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -337,19 +337,18 @@
                             <h1> עץ הדוחות</h1>
                             <ul id="myUL" class="report_tree_UL">
                                 <!--  <li>
-                                <span>לרכז</span>
-                                <ul>
-                                    <li>מתנדבים</li>
-                                    <li>הסעות שבוטלו</li>
-                                </ul>
-                            </li>   -->
+        <span>לרכז</span>
+        <ul>
+            <li>מתנדבים</li>
+            <li>הסעות שבוטלו</li>
+        </ul>
+    </li>   -->
                                 <li>
                                     <span style="font-weight: bold;">לעמותה</span>
                                     <ul class="report_tree_UL">
                                         <li><a class="report_link_cls" id="rp_amuta_vls_week">מתנדבים שבועי</a></li>
                                         <li><a class="report_link_cls" id="rp_amuta_vls_per_pat">מתנדבים - פר חולה</a></li>
                                         <li><a class="report_link_cls" id="rp_amuta_vls_km">מתנדבים – שנתי</a></li>
-                                        <li><a class="report_link_cls" id="rp_amuta_vls_list">רשימת מתנדבים</a></li>
                                         <li><a class="report_link_cls" id="rp_amuta_vls_per_month"> מספר מתנדבים חודשי</a></li>
                                     </ul>
                                 </li>
@@ -358,6 +357,12 @@
                                     <ul class="report_tree_UL">
                                         <li><a class="report_link_cls" id="rp_vl_ride_month">הסעות החודש </a></li>
                                         <li><a class="report_link_cls" id="rp_vl_ride_year">הסעות השנה </a></li>
+                                    </ul>
+                                </li>
+                                <li id="rp_special_list" style="display:none">
+                                    <span style="font-weight: bold;">מיוחדים</span>
+                                    <ul class="report_tree_UL">
+                                        <li><a class="report_link_cls" id="rp_amuta_vls_list">רשימת מתנדבים לביטוח לאומי</a></li>
                                     </ul>
                                 </li>
                             </ul>
