alot of work on new module below:
1. documented rides in volunteer
2. documented calls in volunteer

--- a/Road to Recovery/pages/viewRidePats.html
+++ b/Road to Recovery/pages/viewRidePats.html
@@ -315,6 +315,10 @@
 
         function refreshTable() {
             //this function doesnt changeing timeFilteredArr or fetching data from the back-end
+            $('#wait').show();
+            setTimeout(() => { $('#wait').hide() },3000);
+
+
             checkCookie();
 
             ridePatNums2MarkDeleted = [];
