Sort by date using datetime-plugin

--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -45,8 +45,9 @@
        <script src="assets/js/jquery.min.js"></script>
 
        <script src="dataTables.js"></script>
-    <!--<script src="moment.js"></script>
-    <script src="datetime-moment.js"></script>-->
+        <script src="moment.js"></script>
+        <script src="datetime-moment.js">
+
 
 
     <!-- Select2 css+js -->
