comment out in manageridepat dont want to show this candidatesBtn yet

--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -549,15 +549,15 @@
 
 
 
-                        let candidatesBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-primary btn-sm m-b-5' id='candidatesBtn' name='" + arr_rides[i].RidePatNum + "' title='הצג מועמדים לנסיעה'><i class='fa fa-car'></i></button>";
+                        //let candidatesBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-primary btn-sm m-b-5' id='candidatesBtn' name='" + arr_rides[i].RidePatNum + "' title='הצג מועמדים לנסיעה'><i class='fa fa-car'></i></button>";
 
 
                         btnStr += editBtn + " ";
-
+                        /*
                         if (arr_rides[i].Drivers.length === 0) {
                             btnStr += candidatesBtn + " ";
                         }
-
+                        */
                         btnStr += deleteBtn;
 
                         //localStorage.setItem('IsAnonymous', JSON.stringify(arr_rides[i].Pat.IsAnonymous));
