--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -549,7 +549,7 @@
 
 
 
-                        //let candidatesBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-primary btn-sm m-b-5' id='candidatesBtn' name='" + arr_rides[i].RidePatNum + "' title='הצג מועמדים לנסיעה'><i class='fa fa-car'></i></button>";
+                        let candidatesBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-primary btn-sm m-b-5' id='candidatesBtn' name='" + arr_rides[i].RidePatNum + "' title='הצג מועמדים לנסיעה'><i class='fa fa-car'></i></button>";
 
 
                         btnStr += editBtn + " ";
