viewVolunteer.html change columns widths

--- a/Road to Recovery/pages/viewVolunteer.html
+++ b/Road to Recovery/pages/viewVolunteer.html
@@ -297,16 +297,14 @@
 
                         ],
                         columns: [
-                            { data: "DisplayName", width: "10%" },
-                            { data: "TypeVol", width: "5%" },
-                            { data: "CellPhone", width: "5%" },
-
-                            { data: "EnglishName", width: "10%" },
-
-                            { data: "City", width: "10%" },
-                            { data: "Remarks", width: "15%" },
-                            { data: "LastModified", width: "10%" },
-                            { data: "Buttons", width: "20%" },
+                            { data: "DisplayName", width: "10%" },         //0
+                            { data: "TypeVol", width: "5%" },              //1
+                            { data: "CellPhone", width: "5%" },            //2
+                            { data: "EnglishName", width: "10%" },         //3
+                            { data: "City", width: "10%" },                //4
+                            { data: "Remarks", width: "25%" },             //5
+                            { data: "LastModified", width: "10%" },        //6
+                            { data: "Buttons", width: "25%" },             //7
                         ],
                     });
 
